fix: toc gradient hover on mobile

--- a/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/dropdown/styles.scss
+++ b/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/dropdown/styles.scss
@@ -206,7 +206,7 @@
 
     content: '';
 
-    background-color: rgba(137, 137, 137, 0.5);
+    background-color: var(--color-b50);
 
     .dropdown--list_expanded + & {
       display: block;
