--- a/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/toc-tree/styles.scss
+++ b/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/toc-tree/styles.scss
@@ -7,17 +7,23 @@
   --toc-hover-color: var(--color-b08);
   --toc-font: 400 13px/24px var(--font-family-default);
   --toc-color: var(--color-text);
+  --toc-link-hover-gradient: linear-gradient(90deg, rgba(255, 255, 255, 0.08) 0%, rgba(17, 0, 0, 0.08) 100%);
+  --toc-button-hover-gradient: linear-gradient(270deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.08) 100%);
 }
 
 .theme-dark {
   --toc-hover-color: var(--color-w08);
   --toc-color: var(--color-text-dt);
+  --toc-link-hover-gradient: linear-gradient(270deg, rgba(255, 255, 255, 0.08) 0%, rgba(17, 0, 0, 0) 100%);
+  --toc-button-hover-gradient: linear-gradient(90deg, rgba(255, 255, 255, 0.08) 0%, rgba(17, 0, 0, 0) 100%);
 }
 
 @media (width < $breakpoint-desktop-min) {
   .theme-dark_mobile {
     --toc-color: var(--color-text-dt);
     --toc-hover-color: var(--color-w08);
+    --toc-link-hover-gradient: linear-gradient(270deg, rgba(255, 255, 255, 0.08) 0%, rgba(17, 0, 0, 0) 100%);
+    --toc-button-hover-gradient: linear-gradient(90deg, rgba(255, 255, 255, 0.08) 0%, rgba(17, 0, 0, 0) 100%);
   }
 }
 
@@ -103,14 +109,8 @@
       }
     }
 
-    @media (hover: hover) {
-      &:hover {
-        background: linear-gradient(270deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.08) 100%);
-      }
-    }
-
-    &:active {
-      background-color: var(--toc-hover-color);
+    &:hover {
+      background: var(--toc-button-hover-gradient);
     }
 
     &:focus-visible {
@@ -240,16 +240,8 @@
     line-height: 32px;
   }
 
-  .theme-dark &--button:hover {
-    background: linear-gradient(90deg, rgba(255, 255, 255, 0.08) 0%, rgba(17, 0, 0, 0.08) 100%);
-  }
-
   &--button + &--link:hover {
-    background: linear-gradient(90deg, rgba(255, 255, 255, 0.08) 0%, rgba(17, 0, 0, 0.08) 100%);
-  }
-
-  .theme-dark &--button + &--link:hover {
-    background: linear-gradient(270deg, rgba(255, 255, 255, 0.08) 0%, rgba(17, 0, 0, 0.08) 100%);
+    background: var(--toc-link-hover-gradient);
   }
 
   &--icon.class::before {
@@ -323,13 +315,21 @@
     color: var(--color-text-dt);
     background-color: var(--color-key-blue);
 
-    &:hover {
-      background-color: var(--color-key-blue-hover);
-    }
-
     &::after {
       filter: invert(0);
     }
+  }
+
+  & .toc--link:hover {
+    background-color: var(--color-key-blue-hover);
+  }
+
+  & .toc--button ~ .toc--link:hover {
+    background: linear-gradient(270deg, rgba(255, 255, 255, 0.16) 0%, rgba(17, 0, 0, 0) 100%), var(--color-key-blue);
+  }
+
+  & .toc--button:hover {
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0.16) 0%, rgba(17, 0, 0, 0) 100%), var(--color-key-blue);
   }
 }
 
